# win32diskimager

./: .gitignore  Changelog.txt  README.txt  TODO.txt  Win32DiskImager.sln  clean.bat  compile.bat  mkzip.bat  setup.iss
Delphi/: DiskImager.pas  DiskWriterDemo.dpr  DiskWriterDemo.dproj  FDemo.dfm  FDemo.pas
Win32SysInfo/: Win32SysInfo.pro  w32si-main.cpp  w32si-mw.cpp  w32si.h  win32sysinfo.ui
cli/: Win32DiskImagerCLI.sln  Win32DiskImagerCLI.vcxproj  Win32DiskImagerCLI.vcxproj.filters
src/: CMakeLists.txt  DiskImager.manifest  DiskImager.pro  DiskImager.rc  Makefile  Makefile.Debug  Makefile.Release  Win32DiskImagerDLL.cpp  Win32DiskImagerDLL.h  cli_main.cpp  deviceinfo.cpp  deviceinfo.h  disk.cpp  disk.h  diskimager_cn.ts  diskimager_de_de.ts  diskimager_en.ts  diskimager_fr.ts  diskimager_it.ts  diskimager_pl.ts  diskwriter.cpp  diskwriter.h  droppablelineedit.cpp  droppablelineedit.h  elapsedtimer.cpp  elapsedtimer.h  gui_icons.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  md5.h  resource.h  ui_helper.cpp  ui_helper.h  ui_mainwindow.h
src/release/: moc_mainwindow.cpp  qrc_gui_icons.cpp
